// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResetPassword> Initial render Reset password token expired A user submits a valid email address should render "success" 1`] = `
<ResetPassword>
  <Container
    className="pt-5"
    fluid={false}
  >
    <div
      className="pt-5 container"
    >
      <Row
        noGutters={false}
      >
        <div
          className="row"
        >
          <Col>
            <div
              className="col"
            >
              <h3
                id="ResetPasswordSuccess"
              >
                Password updated. Please 
                <Link
                  to="/login"
                >
                  click here
                </Link>
                 
                to login
              </h3>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ResetPassword>
`;

exports[`<ResetPassword> Initial render Reset password token expired should render forgot my password form 1`] = `
<ResetPassword>
  <Container
    className="pt-5"
    fluid={false}
  >
    <div
      className="pt-5 container"
    >
      <ForgotMyPasswordForm
        handleSubmit={[Function]}
      >
        <Box
          max={500}
        >
          <div
            style={
              Object {
                "backgroundColor": "#f8f9fa",
                "border": "solid 1px #ccc",
                "borderRadius": "8px",
                "margin": "0 auto",
                "maxWidth": 500,
                "padding": "20px 20px",
                "width": "100%",
              }
            }
          >
            <Row
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col>
                  <div
                    className="col"
                  >
                    <h3
                      className="text-danger"
                    >
                      This session has expired!
                    </h3>
                    <p>
                      Enter your email address and we will send you a link to reset your password.
                    </p>
                    <Form
                      className="w-100"
                      id="ForgotMyPasswordForm"
                      inline={false}
                      onSubmit={[Function]}
                    >
                      <form
                        className="w-100"
                        id="ForgotMyPasswordForm"
                        onSubmit={[Function]}
                      >
                        <FormGroup
                          controlId="forgotMyPasswordEmail"
                        >
                          <div
                            className="form-group"
                          >
                            <FormControl
                              isInvalid={false}
                              name="email"
                              onChange={[Function]}
                              placeholder="@"
                              required={true}
                              type="email"
                              value=""
                            >
                              <input
                                className="form-control"
                                id="forgotMyPasswordEmail"
                                name="email"
                                onChange={[Function]}
                                placeholder="@"
                                required={true}
                                type="email"
                                value=""
                              />
                            </FormControl>
                            <Feedback
                              type="invalid"
                            >
                              <div
                                className="invalid-feedback"
                              />
                            </Feedback>
                            <FormText
                              className="text-muted"
                            >
                              <small
                                className="text-muted form-text"
                              >
                                We'll never share your email with anyone else.
                              </small>
                            </FormText>
                          </div>
                        </FormGroup>
                        <Button
                          active={false}
                          className="float-right"
                          disabled={false}
                          id="ForgotMyPasswordSubmit"
                          type="submit"
                          variant="primary"
                        >
                          <button
                            className="float-right btn btn-primary"
                            disabled={false}
                            id="ForgotMyPasswordSubmit"
                            type="submit"
                          >
                            Reset Password
                          </button>
                        </Button>
                      </form>
                    </Form>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Box>
      </ForgotMyPasswordForm>
    </div>
  </Container>
</ResetPassword>
`;

exports[`<ResetPassword> Initial render Reset password token not expired A user submits a new password should render "success" 1`] = `
<ResetPassword>
  <Container
    className="pt-5"
    fluid={false}
  >
    <div
      className="pt-5 container"
    >
      <Row
        noGutters={false}
      >
        <div
          className="row"
        >
          <Col>
            <div
              className="col"
            >
              <h3
                id="ResetPasswordSuccess"
              >
                Password updated. Please 
                <Link
                  to="/login"
                >
                  click here
                </Link>
                 
                to login
              </h3>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ResetPassword>
`;

exports[`<ResetPassword> Initial render Reset password token not expired should render reset password form 1`] = `
<ResetPassword>
  <Container
    className="pt-5"
    fluid={false}
  >
    <div
      className="pt-5 container"
    >
      <ResetPasswordForm
        handleSubmit={[Function]}
        token="token1234"
      >
        <Box
          max={500}
        >
          <div
            style={
              Object {
                "backgroundColor": "#f8f9fa",
                "border": "solid 1px #ccc",
                "borderRadius": "8px",
                "margin": "0 auto",
                "maxWidth": 500,
                "padding": "20px 20px",
                "width": "100%",
              }
            }
          >
            <Row
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col>
                  <div
                    className="col"
                  >
                    <h3>
                      Reset Password
                    </h3>
                    <Form
                      className="w-100"
                      id="ResetPasswordForm"
                      inline={false}
                      onSubmit={[Function]}
                    >
                      <form
                        className="w-100"
                        id="ResetPasswordForm"
                        onSubmit={[Function]}
                      >
                        <FormGroup
                          className="mb-3"
                          controlId="newPassword"
                        >
                          <div
                            className="mb-3 form-group"
                          >
                            <FormLabel
                              className="text-muted"
                              column={false}
                              srOnly={false}
                            >
                              <label
                                className="text-muted form-label"
                                htmlFor="newPassword"
                              >
                                New password
                              </label>
                            </FormLabel>
                            <FormControl
                              name="newPassword"
                              onChange={[Function]}
                              placeholder="******"
                              required={true}
                              type="password"
                              value=""
                            >
                              <input
                                className="form-control"
                                id="newPassword"
                                name="newPassword"
                                onChange={[Function]}
                                placeholder="******"
                                required={true}
                                type="password"
                                value=""
                              />
                            </FormControl>
                            <PasswordStrength
                              password=""
                            >
                              <div>
                                <ProgressBar
                                  animated={false}
                                  isChild={false}
                                  label=""
                                  max={100}
                                  min={0}
                                  now={0}
                                  srOnly={false}
                                  striped={false}
                                  variant="danger"
                                >
                                  <div
                                    className="progress"
                                  >
                                    <div
                                      aria-valuemax={100}
                                      aria-valuemin={0}
                                      aria-valuenow={0}
                                      className="progress-bar bg-danger"
                                      role="progressbar"
                                      style={
                                        Object {
                                          "width": "0%",
                                        }
                                      }
                                    />
                                  </div>
                                </ProgressBar>
                                <small
                                  className="form-text text-muted"
                                  id="passwordHelpBlock"
                                />
                              </div>
                            </PasswordStrength>
                          </div>
                        </FormGroup>
                        <FormGroup
                          className="mb-3"
                          controlId="confirmPassword"
                        >
                          <div
                            className="mb-3 form-group"
                          >
                            <FormLabel
                              className="text-muted"
                              column={false}
                              srOnly={false}
                            >
                              <label
                                className="text-muted form-label"
                                htmlFor="confirmPassword"
                              >
                                Confirm password
                              </label>
                            </FormLabel>
                            <FormControl
                              isInvalid={false}
                              name="confirmPassword"
                              onChange={[Function]}
                              placeholder="******"
                              required={true}
                              type="password"
                              value=""
                            >
                              <input
                                className="form-control"
                                id="confirmPassword"
                                name="confirmPassword"
                                onChange={[Function]}
                                placeholder="******"
                                required={true}
                                type="password"
                                value=""
                              />
                            </FormControl>
                            <Feedback
                              type="invalid"
                            >
                              <div
                                className="invalid-feedback"
                              />
                            </Feedback>
                            <FormText
                              className="text-muted"
                            >
                              <small
                                className="text-muted form-text"
                              >
                                Matching password 0 of 0
                              </small>
                            </FormText>
                          </div>
                        </FormGroup>
                        <Button
                          active={false}
                          className="float-right"
                          disabled={false}
                          id="ResetPasswordSubmit"
                          type="submit"
                          variant="primary"
                        >
                          <button
                            className="float-right btn btn-primary"
                            disabled={false}
                            id="ResetPasswordSubmit"
                            type="submit"
                          >
                            Reset Password
                          </button>
                        </Button>
                      </form>
                    </Form>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Box>
      </ResetPasswordForm>
    </div>
  </Container>
</ResetPassword>
`;
